--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <script src="socket.io/socket.io.js"></script>
     <script src="js/test.js"></script>
     <script>
-       var app = new Base();
+       var app = new App();
        app.getSumFromBackend([3,4,4,4]);
     </script>
 </head>
