--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Planning poker</title>
     <script src="socket.io/socket.io.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/router/router.js"></script>
     <script src="js/router/routerConfig.js"></script>
     <script src="js/views/defaultView.js"></script>
     <script src="js/views/userView.js"></script>
     <script src="js/views/featureView.js"></script>
-    <script src="js/test.js"></script>
     <script>
        (function(){
            io = io.connect();
@@ -21,5 +21,6 @@
        })();
     </script>
 </head>
+<body>
 </body>
 </html>
