--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <script src="socket.io/socket.io.js"></script>
     <script src="js/router/router.js"></script>
     <script src="js/router/routerConfig.js"></script>
+    <script src="js/views/defaultView.js"></script>
+    <script src="js/views/userView.js"></script>
+    <script src="js/views/featureView.js"></script>
     <script src="js/test.js"></script>
     <script>
        (function(){
