--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 
     <title></title>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/app.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="/js/helpers/helpers.js"></script>
     <script src="/js/components/baseComponent.js"></script>
     <script src="/js/components/loginBar.js"></script>
     <script src="js/router/router.js"></script>
     <script src="js/router/routerConfig.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/views/defaultView.js"></script>
     <script src="js/views/userView.js"></script>
     <script src="js/views/featureView.js"></script>
