includes added to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="/js/helpers/helpers.js"></script>
+    <script src="/js/observer/Observer.js"></script>
+    <script src="/js/observer/ObservableComponent.js"></script>
+    <script src="/js/models/BaseModel.js"></script>
+    <script src="/js/models/mediator.js"></script>
+    <script src="/js/models/query.js"></script>
     <script src="/js/components/baseComponent.js"></script>
     <script src="/js/components/loginBar.js"></script>
     <script src="js/router/router.js"></script>
