--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     <script src="/js/components/componentTaskDetail.js"></script>
     <script src="/js/components/componentTaskList.js"></script>
     <script src="/js/components/componentDropdown.js"></script>
-    <script>
+    <script>        
         (function(){
-            $.get("/handshake",function(data, status){
+            
+            
+            $.get("/handshake",function(data){
                 if(data.error){
                     //TODO zobrazit tlačítko login
                     document.getElementById('loginButton').style.display = 'block';
