--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     <script src="js/views/userView.js"></script>
     <script src="js/views/featureView.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>
+    <script>        
         (function(){
-            $.get("/handshake",function(data, status){
+            
+            
+            $.get("/handshake",function(data){
                 window.console.log(data);
                 if(data.error){
                     //TODO zobrazit tlačítko login
