--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="/js/components/componentTaskDetail.js"></script>
     <script src="/js/components/componentTaskList.js"></script>
     <script src="/js/components/componentDropdown.js"></script>
-    <script>
+    <script>        
         (function(){
             $.get("/handshake",function(data){
                 if(data.error){
@@ -30,7 +30,7 @@
                     document.getElementById('loginButton').style.display = 'block';
                 }else{
                     document.getElementById('loginButton').style.display = 'none';
-                    var app = new App();
+                    app = new App();
                     app.init();
                     app.bulk = data;
                 }
