--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="js/views/userView.js"></script>
     <script src="js/views/featureView.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="/js/components/componentTaskDetail.js"></script>
     <script>
         (function(){
             $.get("/handshake",function(data, status){
