getAllTasks, insertUser, insertUsersFromCSV

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     <script src="js/views/userView.js"></script>
     <script src="js/views/featureView.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>        
+    <script>
         (function(){
-            
-            
             $.get("/handshake",function(data){
                 window.console.log(data);
                 if(data.error){
@@ -39,6 +37,12 @@
     </script>
 </head>
 <body>
+    <script>
+        var io = io.connect();
+        io.emit('user:insertFromCSV', "karel,zibar,dsdasdadadzibbykarel@gmail.com,1,2\nkarel2,zibar2,neco@neco.com,1,1", function(data){
+            console.log(data);
+        });
+    </script>
     <div id="main-wrapper"></div>
     <a href="/auth/google" id="loginButton">Sign In with Google</a>
 </body>
