--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
     <title></title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="/js/helpers/helpers.js"></script>
     <script src="/js/observer/Observer.js"></script>
     <script src="/js/observer/ObservableComponent.js"></script>
-    <script src="/js/models/BaseModel.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/router/router.js"></script>
+    <script src="/js/router/routerConfig.js"></script>
+    <script src="/js/views/viewHome.js"></script>
+    <script src="/js/helpers/helpers.js"></script>
+    <script src="/js/models/model.js"></script>
+    <script src="/js/models/actions.js"></script>
     <script src="/js/models/mediator.js"></script>
-    <script src="/js/models/query.js"></script>
     <script src="/js/components/baseComponent.js"></script>
-    <script src="/js/components/loginBar.js"></script>
-    <script src="js/router/router.js"></script>
-    <script src="js/router/routerConfig.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/views/defaultView.js"></script>
-    <script src="js/views/userView.js"></script>
-    <script src="js/views/featureView.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="/js/components/componentTest.js"></script>
+    <script src="/js/components/componentNavBar.js"></script>
     <script src="/js/components/componentTaskDetail.js"></script>
+    <script src="/js/components/componentTaskList.js"></script>
     <script>
         (function(){
             $.get("/handshake",function(data, status){
@@ -32,6 +31,8 @@
                 }else{
                     //TODO app.init();
                     document.getElementById('loginButton').style.display = 'none';
+                    var app = new App();
+                    app.init();
                 }
             });
         })();
