us40418: dropdown changed - removing of listeners changed, variables renamed

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="/js/components/componentNavBar.js"></script>
     <script src="/js/components/componentTaskDetail.js"></script>
     <script src="/js/components/componentTaskList.js"></script>
+    <script src="/js/components/componentDropdown.js"></script>
     <script>
         (function(){
             $.get("/handshake",function(data, status){
