--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="/js/helpers/helpers.js"></script>
+    <script src="/js/helpers/constants.js"></script>
     <script src="/js/observer/Observer.js"></script>
     <script src="/js/observer/ObservableComponent.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/router/router.js"></script>
     <script src="/js/router/routerConfig.js"></script>
-    <script src="/js/views/viewWitzTest.js"></script>
     <script src="/js/views/viewBase.js"></script>
     <script src="/js/views/viewDefault.js"></script>
     <script src="/js/views/viewHome.js"></script>
@@ -31,7 +31,7 @@
     <script src="/js/components/componentDropdown.js"></script>
     <script src="/js/components/componentCheckBox.js"></script>
     <script src="/js/components/componentFilter.js"></script>
-    
+    <script src="/js/components/componentHide.js"></script>
     <script>
         (function(){
         
