--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <script src="/js/components/componentTaskDetail.js"></script>
     <script src="/js/components/componentTaskList.js"></script>
     <script src="/js/components/componentDropdown.js"></script>
-    <script src="/js/views/baseView.js"></script>
-    <script src="/js/views/defaultView.js"></script>
+    <script src="/js/views/viewBase.js"></script>
+    <script src="/js/views/viewDefault.js"></script>
     <script>
         (function(){
             $.get("/handshake",function(data){
