--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="/js/components/componentTaskDetail.js"></script>
     <script src="/js/components/componentTaskList.js"></script>
     <script src="/js/components/componentDropdown.js"></script>
+    <script src="/js/components/componentCheckBox.js"></script>
     <script src="/js/views/viewBase.js"></script>
     <script src="/js/views/viewDefault.js"></script>
     <script>
