--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
 
     <title></title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="/js/helpers/helpers.js"></script>
     <script src="/js/observer/Observer.js"></script>
     <script src="/js/observer/ObservableComponent.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/router/router.js"></script>
     <script src="/js/router/routerConfig.js"></script>
+    <script src="/js/views/viewBase.js"></script>
+    <script src="/js/views/viewDefault.js"></script>
     <script src="/js/views/viewHome.js"></script>
-    <script src="/js/helpers/helpers.js"></script>
+    <script src="/js/views/viewManager.js"></script>
+    <script src="/js/views/viewPeopleAdmin.js"></script>
+    <script src="/js/views/viewTaskAdmin.js"></script>
     <script src="/js/models/model.js"></script>
     <script src="/js/models/actions.js"></script>
     <script src="/js/models/mediator.js"></script>
@@ -23,8 +29,7 @@
     <script src="/js/components/componentTaskList.js"></script>
     <script src="/js/components/componentDropdown.js"></script>
     <script src="/js/components/componentCheckBox.js"></script>
-    <script src="/js/views/viewBase.js"></script>
-    <script src="/js/views/viewDefault.js"></script>
+    
     <script>
         (function(){
             $.get("/handshake",function(data){
