bulk data is now in app.bulk and not in app.bulk.data

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -40,7 +40,7 @@
                    
                     document.getElementById('loginButton').style.display = 'none';
                     app = new App();
-                    app.bulk = data;
+                    app.bulk = data.data;
                     app.init();
                     
                 }
