ComponentCheckBox - added simple style, added view to view checkBox

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="/js/views/viewDepartmentAdmin.js"></script>
     <script src="/js/views/viewPeopleAdmin.js"></script>
     <script src="/js/views/viewTaskAdmin.js"></script>
+    <script src="/js/views/viewTestCheckBox.js"></script>
     <script src="/js/models/model.js"></script>
     <script src="/js/models/actions.js"></script>
     <script src="/js/models/mediator.js"></script>
