manager replaced with department admin

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="/js/views/viewBase.js"></script>
     <script src="/js/views/viewDefault.js"></script>
     <script src="/js/views/viewHome.js"></script>
-    <script src="/js/views/viewManager.js"></script>
+    <script src="/js/views/viewDepartmentAdmin.js"></script>
     <script src="/js/views/viewPeopleAdmin.js"></script>
     <script src="/js/views/viewTaskAdmin.js"></script>
     <script src="/js/models/model.js"></script>
