--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         })();
         
             /*for testing user tasks list  */
-          var socket = io.connect();
+          /*var socket = io.connect();
         
        socket.emit('tasks/get-all', function (data) {
-        window.console.log(data.data)});
+        window.console.log(data.data)});*/
 
 
     </script>
