us40420: Filter component added. Observer modified to fire source as well. Test view added. Css added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="/js/app.js"></script>
     <script src="/js/router/router.js"></script>
     <script src="/js/router/routerConfig.js"></script>
+    <script src="/js/views/viewWitzTest.js"></script>
     <script src="/js/views/viewBase.js"></script>
     <script src="/js/views/viewDefault.js"></script>
     <script src="/js/views/viewHome.js"></script>
@@ -29,6 +30,7 @@
     <script src="/js/components/componentTaskDetail.js"></script>
     <script src="/js/components/componentDropdown.js"></script>
     <script src="/js/components/componentCheckBox.js"></script>
+    <script src="/js/components/componentFilter.js"></script>
     
     <script>
         (function(){
