TemplateList - final changes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
    
     <script src="/js/components/componentFilter.js"></script>
     <script src="/js/components/componentHide.js"></script>
+    <script src="/js/components/componentTemplateList.js"></script>
     <script>
         (function() {
 
