factory for buddyTaskList moved to separate file, queries in tasks-repository.js combined

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="/js/components/componentTest.js"></script>
     <script src="/js/components/componentNavBar.js"></script>
     <script src="/js/components/componentBuddyTaskListsInView.js"></script>
+    <script src="/js/components/componentBuddyTaskListFactory.js"></script>
     <script src="/js/components/componentBuddyTaskList.js"></script>
     <script src="/js/components/componentTaskDetail.js"></script>
     <script src="/js/components/componentDropdown.js"></script>
