--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -9,14 +9,14 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="/main.js"></script>
     <script>
- 
+
 
 
     </script>
 </head>
 <body>
-    <div id="navbar"><a href="/auth/google" id="login-button">Login</a></div>
-    <div id="main-wrapper"></div>
+<div id="navbar"><a href="/auth/google" id="login-button">Login</a></div>
+<div id="main-wrapper"></div>
 </body>
 
 </html>
