grunt, webpack implemented
grunt,webpack done

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -7,69 +7,11 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="/js/helpers/helpers.js"></script>
-    <script src="/js/helpers/constants.js"></script>
-    <script src="/js/observer/Observer.js"></script>
-    <script src="/js/observer/ObservableComponent.js"></script>
-    <script src="/js/app.js"></script>
-    <script src="/js/router/router.js"></script>
-    <script src="/js/router/routerConfig.js"></script>
-    <script src="/js/views/viewBase.js"></script>
-    <script src="/js/views/viewDefault.js"></script>
-    <script src="/js/views/viewHome.js"></script>
-    <script src="/js/views/viewDepartmentAdmin.js"></script>
-    <script src="/js/views/viewPeopleAdmin.js"></script>
-    <script src="/js/views/viewTaskAdmin.js"></script>
-    <script src="/js/views/viewTest.js"></script>
-    <script src="/js/models/model.js"></script>
-    <script src="/js/models/actions.js"></script>
-    <script src="/js/models/mediator.js"></script>
-    <script src="/js/components/componentBase.js"></script>
-    <script src="/js/components/componentTest.js"></script>
-    <script src="/js/components/componentNavBar.js"></script>
-    <script src="/js/components/componentBuddyTaskListsInView.js"></script>
-    <script src="/js/components/componentBuddyTaskListFactory.js"></script>
-    <script src="/js/components/componentBuddyTaskList.js"></script>
-    <script src="/js/components/componentTaskDetail.js"></script>
-    <script src="/js/components/componentDropdown.js"></script>
-    <script src="/js/components/componentCheckBox.js"></script>
-    <script src="/js/components/componentFilter.js"></script>
-    <script src="/js/components/componentHide.js"></script>
-    <script src="/js/components/componentTemplateList.js"></script>
+    <script src="/main.js"></script>
 
+    
     <script>
-        (function() {
-
-            $.get("/handshake", function (data) {
-                if (!data.error) {
-                    app = new App();
-                    app.bulk = data.data;
-                    app.init();
-
-                }
-            });
-
-
-            if ("onhashchange" in window) { // event supported?
-                window.onhashchange = function () {
-                    app.router.changeView(window.location.hash);
-                }
-            }
-            else { // event not supported:
-                var storedHash = window.location.hash;
-                window.setInterval(function () {
-                    if (window.location.hash != storedHash) {
-                        app.router.changeView(window.location.hash);
-                    }
-                }, 100);
-            }
-        })();
-
-        /*for testing user tasks list  */
-        /*var socket = io.connect();
-        socket.emit('tasks/get-all', function (data) {
-            window.console.log(data.data);
-        });*/
+ 
 
 
     </script>
