--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
 
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/dist/main.css">
     <script src="/socket.io/socket.io.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="/main.js"></script>
+    <script src="/dist/main.js"></script>
+    
     <script>
-
-
+ 
 
     </script>
 </head>
 <body>
-<div id="navbar"><a href="/auth/google" id="login-button">Login</a></div>
-<div id="main-wrapper"></div>
+    <div id="navbar"><a href="/auth/google" id="login-button">Login</a></div>
+    <div id="main-wrapper"></div>
 </body>
 
 </html>
