us43497: Popup refactor

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <div id="navbar"><a href="/auth/google" id="login-button">Login</a></div>
     <div id="main-wrapper"></div>
+    <div id="popup-wrapper"></div>
 </body>
 
 </html>
